--- a/package.json
+++ b/package.json
@@ -6,27 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/toto04/esp8266-RGB-lights.git"
+  },
   "keywords": [
     "homebridge-plugin"
   ],
   "engines": {
     "homebridge": ">=0.2.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/toto04/esp8266-RGB-lights.git"
-  },
   "author": "Tommaso Morganti",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/toto04/esp8266-RGB-lights/issues"
   },
-  "homepage": "https://github.com/toto04/esp8266-RGB-lights#readme",
-  "dependencies": {
-    "@types/mosca": "^2.8.1",
-    "@types/mqtt": "^2.5.0",
-    "@types/node": "^12.7.2",
-    "hap-nodejs": "^0.5.0",
-    "mosca": "^2.8.3"
-  }
+  "homepage": "https://github.com/toto04/esp8266-RGB-lights#readme"
 }
