--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/toto04/esp8266-RGB-lights/issues"
   },
-  "homepage": "https://github.com/toto04/esp8266-RGB-lights#readme"
+  "homepage": "https://github.com/toto04/esp8266-RGB-lights#readme",
+  "dependencies": {
+    "color-convert": "^2.0.1",
+    "mosca": "^2.8.3",
+    "mqtt": "^3.0.0"
+  }
 }
