--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/toto04/esp8266-RGB-lights#readme",
   "dependencies": {
+    "@types/nedb": "^1.8.9",
     "color-convert": "^2.0.1",
     "express": "^4.17.1",
     "mosca": "^2.8.3",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "nedb": "^1.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1"
